[gd_scene load_steps=6 format=2]

[ext_resource path="res://Theme/DefaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://Levels/Settings.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/PNG/green_button02.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/PNG/green_button00.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/PNG/green_button01.png" type="Texture" id=5]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="MarginContainer" parent="HBoxContainer"]
margin_right = 637.0
margin_bottom = 1080.0
size_flags_horizontal = 3

[node name="Mid" type="MarginContainer" parent="HBoxContainer"]
margin_left = 641.0
margin_right = 1278.0
margin_bottom = 1080.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Mid"]
margin_right = 637.0
margin_bottom = 1080.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Mid/VBoxContainer"]
margin_right = 637.0
margin_bottom = 357.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/Mid/VBoxContainer/MarginContainer"]
margin_top = 155.0
margin_right = 637.0
margin_bottom = 201.0
theme = ExtResource( 1 )
text = "Settings"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Mid/VBoxContainer"]
margin_top = 361.0
margin_right = 637.0
margin_bottom = 718.0
size_flags_vertical = 3

[node name="EnableSound" type="CheckBox" parent="HBoxContainer/Mid/VBoxContainer/VBoxContainer"]
margin_right = 637.0
margin_bottom = 54.0
theme = ExtResource( 1 )
text = "Enable Sound"

[node name="EnableMusic" type="CheckBox" parent="HBoxContainer/Mid/VBoxContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 637.0
margin_bottom = 112.0
theme = ExtResource( 1 )
text = "Enable Music"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/Mid/VBoxContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 637.0
margin_bottom = 162.0

[node name="Label" type="Label" parent="HBoxContainer/Mid/VBoxContainer/VBoxContainer/MarginContainer2"]
margin_right = 637.0
margin_bottom = 46.0
theme = ExtResource( 1 )
text = "Volume"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Mid/VBoxContainer/VBoxContainer"]
margin_top = 166.0
margin_right = 637.0
margin_bottom = 212.0

[node name="Label" type="Label" parent="HBoxContainer/Mid/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 120.0
margin_bottom = 46.0
theme = ExtResource( 1 )
text = "Music"

[node name="MusicVolume" type="HSlider" parent="HBoxContainer/Mid/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 124.0
margin_right = 637.0
margin_bottom = 16.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/Mid/VBoxContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 637.0
margin_bottom = 262.0

[node name="Label" type="Label" parent="HBoxContainer/Mid/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 113.0
margin_bottom = 46.0
theme = ExtResource( 1 )
text = "Sound"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundVolume" type="HSlider" parent="HBoxContainer/Mid/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 117.0
margin_right = 637.0
margin_bottom = 16.0
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/Mid/VBoxContainer"]
margin_top = 722.0
margin_right = 637.0
margin_bottom = 1080.0
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/Mid/VBoxContainer/MarginContainer2"]
margin_right = 637.0
margin_bottom = 358.0

[node name="TextureButton" type="TextureButton" parent="HBoxContainer/Mid/VBoxContainer/MarginContainer2/CenterContainer"]
margin_left = 223.0
margin_top = 154.0
margin_right = 413.0
margin_bottom = 203.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )

[node name="Label" type="Label" parent="HBoxContainer/Mid/VBoxContainer/MarginContainer2/CenterContainer/TextureButton"]
anchor_left = 0.25
anchor_right = 0.25
margin_right = 90.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource( 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="MarginContainer" parent="HBoxContainer"]
margin_left = 1282.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3

[connection signal="toggled" from="HBoxContainer/Mid/VBoxContainer/VBoxContainer/EnableSound" to="." method="_on_EnableSound_toggled"]
[connection signal="toggled" from="HBoxContainer/Mid/VBoxContainer/VBoxContainer/EnableMusic" to="." method="_on_EnableMusic_toggled"]
[connection signal="value_changed" from="HBoxContainer/Mid/VBoxContainer/VBoxContainer/HBoxContainer/MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="value_changed" from="HBoxContainer/Mid/VBoxContainer/VBoxContainer/HBoxContainer2/SoundVolume" to="." method="_on_SoundVolume_value_changed"]
[connection signal="pressed" from="HBoxContainer/Mid/VBoxContainer/MarginContainer2/CenterContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
